build/00013/H4P_TakeOnMe_pico.log
Processing pico (platform: https://github.com/maxgerhardt/platform-raspberrypi.git#5b72058658ebaf98045755662bc8b28479bd288b; framework: arduino; board: rpipicow)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/raspberrypi/rpipicow.html
PLATFORM: Raspberry Pi RP2040 (1.14.0+sha.5b72058) > Pico W
HARDWARE: RP2040 133MHz, 256KB RAM, 2MB Flash
DEBUG: Current (blackmagic) External (blackmagic, cmsis-dap, jlink, picoprobe, raspberrypi-swd)
PACKAGES: 
 - framework-arduinopico @ 1.40101.0+sha.9d17f42 
 - tool-picotool-rp2040-earlephilhower @ 5.140200.240929 (14.2.0) 
 - toolchain-rp2040-earlephilhower @ 5.140200.240929 (14.2.0)
Converting H4P_TakeOnMe.ino
Flash size: 2.00MB
Sketch size: 1.50MB
Filesystem size: 0.50MB
PSRAM size: 0.00MB
Maximium Sketch size: 1568768 EEPROM start: 0x101ff000 Filesystem start: 0x1017f000 Filesystem end: 0x101ff000
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ deep+, Compatibility ~ soft
Found 72 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.10+sha.9125640
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.13+sha.fcbce26
|-- H4Plugins @ 3.5.8+sha.b12de62
|-- LittleFS @ 0.1.0
|-- WiFi @ 1.0.0
|-- lwIP_CYW43 @ 1
|-- lwIP-Ethernet @ 1
|-- SPI @ 1.0
|-- Updater @ 1.0
|-- MD5Builder @ 1.0.0
|-- LEAmDNS @ 1.2
|-- DNSServer @ 1.1.1
|-- ArduinoOTA @ 1.0
|-- HTTPUpdate @ 1.3
|-- HTTPClient @ 1.2
Building in release mode
Compiling .pio/build/pico/src/H4P_TakeOnMe.ino.cpp.o
Archiving .pio/build/pico/libbc7/libMD5Builder.a
Indexing .pio/build/pico/libbc7/libMD5Builder.a
Archiving .pio/build/pico/lib897/libPicoOTA.a
Indexing .pio/build/pico/lib897/libPicoOTA.a
Archiving .pio/build/pico/lib5f5/libUpdater.a
Indexing .pio/build/pico/lib5f5/libUpdater.a
Compiling .pio/build/pico/lib53c/lwIP_Ethernet/LwipEthernet.cpp.o
Compiling .pio/build/pico/lib53c/lwIP_Ethernet/LwipIntf.cpp.o
Compiling .pio/build/pico/lib53c/lwIP_Ethernet/LwipIntfCB.cpp.o
Compiling .pio/build/pico/lib57c/SPI/SPI.cpp.o
Compiling .pio/build/pico/libbe5/lwIP_CYW43/lwIP_CYW43.cpp.o
Archiving .pio/build/pico/lib53c/liblwIP_Ethernet.a
Indexing .pio/build/pico/lib53c/liblwIP_Ethernet.a
Compiling .pio/build/pico/libbe5/lwIP_CYW43/utility/CYW43shim.cpp.o
Archiving .pio/build/pico/lib57c/libSPI.a
Indexing .pio/build/pico/lib57c/libSPI.a
Compiling .pio/build/pico/lib4b8/WiFi/BearSSLHelpers.cpp.o
Compiling .pio/build/pico/lib4b8/WiFi/CertStoreBearSSL.cpp.o
Archiving .pio/build/pico/libbe5/liblwIP_CYW43.a
Indexing .pio/build/pico/libbe5/liblwIP_CYW43.a
Compiling .pio/build/pico/lib4b8/WiFi/WiFiClass.cpp.o
In file included from /home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_TakeOnMe.ino:2:
.pio/libdeps/pico/H4Plugins/src/H4Plugins.h:6:76: note: '#pragma message: Using Wifi AP - Make sure you have made arrangements!'
    6 |     #pragma message("Using Wifi AP - Make sure you have made arrangements!")
      |                                                                            ^
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_TakeOnMe.ino:26:37: error: no matching function for call to 'H4P_WiFi::H4P_WiFi(const char [9], const char [9])'
   26 | H4P_WiFi wiffy("XXXXXXXX","XXXXXXXX");
      |                                     ^
In file included from .pio/libdeps/pico/H4Plugins/src/H4P_AsyncMQTT.h:18,
                 from .pio/libdeps/pico/H4Plugins/src/H4Plugins.h:10:
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:117:9: note: candidate: 'H4P_WiFi::H4P_WiFi(const std::string&)'
  117 |         H4P_WiFi(const std::string& device=""):
      |         ^~~~~~~~
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:117:9: note:   candidate expects 1 argument, 2 provided
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:47:7: note: candidate: 'H4P_WiFi::H4P_WiFi(const H4P_WiFi&)'
   47 | class H4P_WiFi: public H4Service, public H4AsyncWebServer {
      |       ^~~~~~~~
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:47:7: note:   candidate expects 1 argument, 2 provided
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:47:7: note: candidate: 'H4P_WiFi::H4P_WiFi(H4P_WiFi&&)'
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:47:7: note:   candidate expects 1 argument, 2 provided
*** [.pio/build/pico/src/H4P_TakeOnMe.ino.cpp.o] Error 1
========================== [FAILED] Took 6.94 seconds ==========================
Environment    Status    Duration
-------------  --------  ------------
pico           FAILED    00:00:06.940
==================== 1 failed, 0 succeeded in 00:00:06.940 ====================